add jedis support